cluster/vpn/wireguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wg-easy
  namespace: kloud-vpn
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - vpn.kloud.rche.moe
      secretName: wg-easy-tls
  rules:
    - host: vpn.kloud.rche.moe
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wg-easy-ui
                port:
                  number: 51821
